--- a/devtools/conda-setup+build.yml
+++ b/devtools/conda-setup+build.yml
@@ -4,14 +4,13 @@ steps:
     conda config --set always_yes true
     conda config --set quiet true
   displayName: Configure conda
-
-- bash: conda install conda-build conda-verify pip
-  displayName: 'Install dependencies'
-  continueOnError: false
-
-- template: checkout.yml
-
 - bash: |
-    conda build devtools/conda-recipe --python=3.9 --numpy=1.21
+    conda update --all
+    conda install conda-build conda-verify pip
+  displayName: 'Update and install dependencies'
+  continueOnError: false
+- template: checkout.yml
+- bash: |
+    conda build devtools --python=3.9 --numpy=1.21
   displayName: 'Build and test'
   continueOnError: false
