--- a/devtools/conda-recipe/meta.yaml
+++ b/devtools/conda-recipe/meta.yaml
@@ -35,8 +35,8 @@ requirements:
 test:
   imports:
     - deeptime
+  source_files:
+    - tests/*
   requires:
     - pytest
     - pytest-sugar
-  commands:
-    - pytest tests/
