--- a/devtools/conda-setup+build.yml
+++ b/devtools/conda-setup+build.yml
@@ -11,6 +11,6 @@ steps:
   continueOnError: false
 - template: checkout.yml
 - bash: |
-    conda build devtools
+    conda build devtools --python 3.9 --numpy 1.21
   displayName: 'Build and test'
   continueOnError: false
