--- a/devtools/azure-pipelines-conda.yml
+++ b/devtools/azure-pipelines-conda.yml
@@ -2,43 +2,31 @@ jobs:
 - job: 'Linux_with_conda'
   pool:
     vmImage: 'Ubuntu-18.04'
-  variables:
-    - name: 'CONDA_PY'
-      value: '3.9'
-    - name: 'CONDA_NPY'
-      value: '1.21'
   steps:
     - bash: echo "##vso[task.prependpath]$CONDA/bin"
       displayName: Add conda to PATH
+    - template: checkout.yml
     - template: conda-setup+build.yml
 
 - job: 'MacOS_with_conda'
   pool:
     vmImage: 'macOS-1015'
-  variables:
-    - name: 'CONDA_PY'
-      value: '3.9'
-    - name: 'CONDA_NPY'
-      value: '1.21'
   steps:
     - bash: echo "##vso[task.prependpath]$CONDA/bin"
       displayName: Add conda to PATH
     - bash: sudo chown -R $USER $CONDA
       displayName: Take ownership of conda installation
+    - template: checkout.yml
     - template: conda-setup+build.yml
 
 - job: 'Windows_with_conda'
   pool:
     vmImage: 'windows-2019'
-  variables:
-    - name: 'CONDA_PY'
-      value: '3.9'
-    - name: 'CONDA_NPY'
-      value: '1.21'
   steps:
     - task: BatchScript@1
       inputs:
         filename: "$(CONDA)\\Scripts\\activate.bat"
         modifyEnvironment: True
       displayName: Add conda to PATH
+    - template: checkout.yml
     - template: conda-setup+build.yml
