--- a/devtools/conda-setup+build.yml
+++ b/devtools/conda-setup+build.yml
@@ -1,11 +1,3 @@
-parameters:
-- name: pythonVersion
-  type: string
-  default: 3.9
-- name: numpyVersion
-  type: string
-  default: 1.21
-
 steps:
 - bash: |
     conda config --add channels conda-forge
@@ -19,6 +11,6 @@ steps:
   continueOnError: false
 - template: checkout.yml
 - bash: |
-    conda build devtools --python ${{ parameters.pythonVersion }} --numpy ${{ parameters.numpyVersion }} -c pytorch
+    conda build devtools --python 3.9 --numpy 1.21 -c pytorch
   displayName: 'Build and test'
   continueOnError: false
