--- a/devtools/conda-setup+build.yml
+++ b/devtools/conda-setup+build.yml
@@ -9,8 +9,7 @@ steps:
     conda install conda-build conda-verify pip
   displayName: 'Update and install dependencies'
   continueOnError: false
-- template: checkout.yml
 - bash: |
-    conda build devtools/conda-recipe --python 3.9 --numpy 1.21 -c pytorch
+    conda build devtools --python 3.9 --numpy 1.21 -c pytorch
   displayName: 'Build and test'
   continueOnError: false
