--- a/devtools/conda-recipe/meta.yaml
+++ b/devtools/conda-recipe/meta.yaml
@@ -36,5 +36,11 @@ requirements:
 test:
   imports:
     - deeptime
+  source_files:
+    - tests/*
   requires:
     - pytest
+    - pytest-sugar
+    - scikit-learn
+    - pytorch
+    - nocpu
