--- a/devtools/conda-setup+build.yml
+++ b/devtools/conda-setup+build.yml
@@ -1,18 +1,15 @@
 steps:
-  - bash: |
-      conda config --add channels conda-forge
-      conda config --set always_yes true
-      conda config --set quiet true
-    displayName: Configure conda
-  - bash: |
-      python -m pip install --upgrade pip
-      conda update --all
-    displayName: Update conda
-  - bash: |
-      conda install conda-build conda-verify pip
-    displayName: 'Install dependencies'
-    continueOnError: false
-  - bash: |
-      conda build devtools
-    displayName: 'Build and test'
-    continueOnError: false
+- bash: |
+    conda config --add channels conda-forge
+    conda config --set always_yes true
+    conda config --set quiet true
+  displayName: Configure conda
+- bash: |
+    conda update --all
+    conda install conda-build conda-verify pip
+  displayName: 'Update and install dependencies'
+  continueOnError: false
+- bash: |
+    conda build devtools --python 3.9 --numpy 1.21 -c pytorch
+  displayName: 'Build and test'
+  continueOnError: false
