--- a/devtools/azure-pipelines-osx.yml
+++ b/devtools/azure-pipelines-osx.yml
@@ -2,27 +2,24 @@ jobs:
 - job:
   displayName: "OS X"
   pool:
-    vmImage: 'macOS-10.14'
+    vmImage: 'macOS-1015'
+  timeoutInMinutes: 360
+
   strategy:
     matrix:
-      Python36:
-        CONDA_PY: '3.6'
-        CONDA_NPY: '1.17'
       Python37:
-        CONDA_PY: '3.7'
-        CONDA_NPY: '1.19'
+        python.version: '3.7'
+      Python38:
+        python.version: '3.8'
       Python39:
-        CONDA_PY: '3.9'
-        CONDA_NPY: '1.19'
+        python.version: '3.9'
+
+    maxParallel: 10
 
   steps:
-  - template: checkout.yml
-  - bash: echo "##vso[task.prependpath]$CONDA/bin"
-    displayName: Add conda to PATH
+  - task: UsePythonVersion@0
+    displayName: 'Use Python $(python.version)'
+    inputs:
+      versionSpec: '$(python.version)'
 
-  - script: sudo chmod -R 777 /usr/local/miniconda
-    displayName: Fix Conda permissions
-  - script: env
-
-  - template: conda-setup+build.yml
-  - template: test-results.yml
+  - template: setup+build+test.yml
