--- a/deeptime/markov/tools/kahandot/CMakeLists.txt
+++ b/deeptime/markov/tools/kahandot/CMakeLists.txt
@@ -1,6 +1,6 @@
 project(kahandot CXX)
 
-set(SRC kahandot_module.cpp)
+set(SRC src/kahandot_module.cpp)
 pybind11_add_module(${PROJECT_NAME} ${SRC})
 target_include_directories(${PROJECT_NAME} PUBLIC ${common_includes})
 if (NOT MSVC)
