--- a/deeptime/markov/tools/kahandot/CMakeLists.txt
+++ b/deeptime/markov/tools/kahandot/CMakeLists.txt
@@ -3,6 +3,6 @@ project(kahandot CXX)
 set(SRC src/kahandot_module.cpp)
 pybind11_add_module(${PROJECT_NAME} ${SRC})
 target_include_directories(${PROJECT_NAME} PUBLIC ${common_includes})
-if (NOT MSVC)
+if (DEEPTIME_USE_OPENMP)
     target_link_libraries(${PROJECT_NAME} PUBLIC OpenMP::OpenMP_CXX)
 endif()
