relocate kahan summation

--- a/deeptime/numeric/_bindings/CMakeLists.txt
+++ b/deeptime/numeric/_bindings/CMakeLists.txt
@@ -1,8 +1,8 @@
-project(kahandot CXX)
+project(_numeric_bindings CXX)
 
-set(SRC src/kahandot_module.cpp)
+set(SRC src/numeric_module.cpp)
 pybind11_add_module(${PROJECT_NAME} ${SRC})
-target_include_directories(${PROJECT_NAME} PUBLIC ${common_includes})
+target_include_directories(${PROJECT_NAME} PUBLIC include ${common_includes})
 if (DEEPTIME_USE_OPENMP)
     target_link_libraries(${PROJECT_NAME} PUBLIC OpenMP::OpenMP_CXX)
 endif()
