--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,14 +22,15 @@ endif()
 find_package(pybind11 REQUIRED)
 
 set(common_includes "${CMAKE_CURRENT_LIST_DIR}/deeptime/src/include")
+set(numeric_includes "${CMAKE_CURRENT_LIST_DIR}/deeptime/numeric/_bindings/include")
 
+add_subdirectory(deeptime/numeric/_bindings)
 add_subdirectory(deeptime/data)
 add_subdirectory(deeptime/covariance/util/covar_c)
 add_subdirectory(deeptime/clustering)
 add_subdirectory(deeptime/basis)
 add_subdirectory(deeptime/markov/_bindings)
 add_subdirectory(deeptime/markov/hmm/_bindings)
-add_subdirectory(deeptime/numeric/_bindings)
 add_subdirectory(deeptime/markov/tools/estimation/dense/_bindings)
 add_subdirectory(deeptime/markov/tools/estimation/sparse/_bindings)
 add_subdirectory(deeptime/markov/tools/estimation/sparse/mle/newton)
