--- a/deeptime/covariance/util/covar_c/CMakeLists.txt
+++ b/deeptime/covariance/util/covar_c/CMakeLists.txt
@@ -2,4 +2,5 @@ project(covartools CXX)
 
 set(SRC covartools.hpp covartools.cpp)
 pybind11_add_module(${PROJECT_NAME} ${SRC})
-target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_LIST_DIR}/include ${common_includes})
+target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_LIST_DIR}/include)
+target_link_libraries(${PROJECT_NAME} PUBLIC deeptime::common)
