--- a/deeptime/data/CMakeLists.txt
+++ b/deeptime/data/CMakeLists.txt
@@ -3,4 +3,7 @@ project(_data_bindings CXX)
 set(SRC src/data_module.cpp)
 pybind11_add_module(${PROJECT_NAME} ${SRC})
 target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
-target_link_libraries(${PROJECT_NAME} PUBLIC deeptime::common OpenMP::OpenMP_CXX)
+target_link_libraries(${PROJECT_NAME} PUBLIC deeptime::common)
+if(OpenMP_FOUND)
+    target_link_libraries(${PROJECT_NAME} PUBLIC OpenMP::OpenMP_CXX)
+endif()
