--- a/deeptime/markov/tools/estimation/sparse/_bindings/CMakeLists.txt
+++ b/deeptime/markov/tools/estimation/sparse/_bindings/CMakeLists.txt
@@ -3,4 +3,7 @@ project(_mle_sparse_bindings CXX)
 set(SRC src/mle_sparse_module.cpp)
 pybind11_add_module(${PROJECT_NAME} ${SRC})
 target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_LIST_DIR}/include)
-target_link_libraries(${PROJECT_NAME} PUBLIC deeptime::common OpenMP::OpenMP_CXX)
+target_link_libraries(${PROJECT_NAME} PUBLIC deeptime::common)
+if(OpenMP_FOUND)
+    target_link_libraries(${PROJECT_NAME} PUBLIC OpenMP::OpenMP_CXX)
+endif()
