--- a/deeptime/markov/tools/estimation/sparse/mle/newton/CMakeLists.txt
+++ b/deeptime/markov/tools/estimation/sparse/mle/newton/CMakeLists.txt
@@ -2,4 +2,7 @@ project(objective_sparse_ops CXX)
 
 set(SRC objective_sparse_ops.cpp)
 pybind11_add_module(${PROJECT_NAME} ${SRC})
-target_link_libraries(${PROJECT_NAME} PUBLIC deeptime::common OpenMP::OpenMP_CXX)
+target_link_libraries(${PROJECT_NAME} PUBLIC deeptime::common)
+if(OpenMP_FOUND)
+    target_link_libraries(${PROJECT_NAME} PUBLIC OpenMP::OpenMP_CXX)
+endif()
