--- a/devtools/setup+build+test.yml
+++ b/devtools/setup+build+test.yml
@@ -7,4 +7,7 @@ steps:
 - script: nox -s "tests-$(python.version)" -- cov
   displayName: 'Run tests'
 
+- script: nox -s "tests-$(python.version)" --reuse-existing-virtualenvs -- cpp
+  displayName: 'Run C++ tests'
+
 - template: test-results.yml
