--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,9 +9,7 @@ if(DEFINED PROJECT_NAME)
 endif()
 project(deeptime LANGUAGES C CXX VERSION 0.0.0)
 
-set(DEEPTIME_USE_OPENMP ON CACHE BOOL "Whether to use OpenMP")
-if (DEEPTIME_USE_OPENMP)
-    find_package(OpenMP)
+find_package(OpenMP)
 if(OpenMP_FOUND)
     add_definitions(-DUSE_OPENMP)
 endif()
@@ -19,7 +17,7 @@ endif()
 if(MSVC)
     add_compile_options(/W3 /EHsc /std:c++17)
 else()
-    add_compile_options(-Wall -Wextra -pedantic -Werror)
+    #add_compile_options(-Wall -Wextra -pedantic -Werror)
 endif()
 
 find_package(pybind11 REQUIRED)
