--- a/deeptime/markov/_bindings/CMakeLists.txt
+++ b/deeptime/markov/_bindings/CMakeLists.txt
@@ -7,3 +7,10 @@ target_link_libraries(${PROJECT_NAME} PUBLIC deeptime::common)
 if(OpenMP_FOUND)
     target_link_libraries(${PROJECT_NAME} PUBLIC OpenMP::OpenMP_CXX)
 endif()
+
+pybind11_add_module(_tram_bindings src/tram_module.cpp)
+target_include_directories(_tram_bindings PUBLIC ${CMAKE_CURRENT_LIST_DIR}/include)
+target_link_libraries(_tram_bindings PUBLIC deeptime::numeric)
+if(OpenMP_FOUND)
+    target_link_libraries(${PROJECT_NAME} PUBLIC OpenMP::OpenMP_CXX)
+endif()
