--- a/deeptime/markov/_bindings/CMakeLists.txt
+++ b/deeptime/markov/_bindings/CMakeLists.txt
@@ -8,9 +8,13 @@ if(OpenMP_FOUND)
     target_link_libraries(${PROJECT_NAME} PUBLIC OpenMP::OpenMP_CXX)
 endif()
 
+add_library(deeptime_tram INTERFACE)
+target_include_directories(deeptime_tram INTERFACE include)
+target_link_libraries(deeptime_tram INTERFACE deeptime::numeric deeptime::common)
+add_library(deeptime::tram ALIAS deeptime_tram)
+
 pybind11_add_module(_tram_bindings src/tram_module.cpp)
-target_include_directories(_tram_bindings PUBLIC ${CMAKE_CURRENT_LIST_DIR}/include)
-target_link_libraries(_tram_bindings PUBLIC deeptime::numeric)
+target_link_libraries(_tram_bindings PUBLIC deeptime::tram)
 if(OpenMP_FOUND)
     target_link_libraries(${PROJECT_NAME} PUBLIC OpenMP::OpenMP_CXX)
 endif()
