--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,9 +5,9 @@ run_conan()
 include(${CMAKE_CURRENT_BINARY_DIR}/conanbuildinfo.cmake)
 conan_basic_setup(TARGETS)
 
-set(TEST_SRC src/test_common_utilities.cpp)
+set(TEST_SRC src/test_common_utilities.cpp src/test_swap_arr.cpp)
 add_executable(tests catch_main.cpp ${TEST_SRC})
-target_link_libraries(tests PRIVATE ${CONAN_LIBS} CONAN_PKG::catch2 deeptime::common pybind11::embed)
+target_link_libraries(tests PRIVATE ${CONAN_LIBS} CONAN_PKG::catch2 deeptime::tram pybind11::embed)
 
 add_custom_target(
         run_tests
