--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,9 +5,14 @@ run_conan()
 include(${CMAKE_CURRENT_BINARY_DIR}/conanbuildinfo.cmake)
 conan_basic_setup(TARGETS)
 
+add_library(deeptime_mock INTERFACE)
+target_include_directories(deeptime_mock INTERFACE include)
+add_library(deeptime::mock ALIAS deeptime_mock)
+
+
 set(TEST_SRC src/test_common_utilities.cpp)
 add_executable(tests catch_main.cpp ${TEST_SRC})
-target_link_libraries(tests PRIVATE ${CONAN_LIBS} CONAN_PKG::catch2 deeptime::common pybind11::embed)
+target_link_libraries(tests PRIVATE ${CONAN_LIBS} CONAN_PKG::catch2 deeptime::common deeptime::mock pybind11::embed)
 
 add_custom_target(
         run_tests
@@ -15,6 +20,3 @@ add_custom_target(
         WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
         DEPENDS tests
 )
-
-add_executable(bla bla.cpp)
-target_link_libraries(bla PUBLIC CONAN_PKG::benchmark deeptime::common pybind11::embed)
