--- a/deeptime/markov/tools/estimation/dense/_bindings/CMakeLists.txt
+++ b/deeptime/markov/tools/estimation/dense/_bindings/CMakeLists.txt
@@ -1,9 +1,12 @@
-project(_mle_bindings CXX)
+project(deeptime_msm_mle CXX)
 
-set(SRC src/mle_module.cpp)
-pybind11_add_module(${PROJECT_NAME} ${SRC})
-target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_LIST_DIR}/include)
-target_link_libraries(${PROJECT_NAME} PUBLIC deeptime::common)
+add_library(${PROJECT_NAME} INTERFACE)
+target_include_directories(${PROJECT_NAME} INTERFACE include)
+target_link_libraries(${PROJECT_NAME} INTERFACE deeptime::common)
+add_library(deeptime::msm_mle ALIAS ${PROJECT_NAME})
+
+pybind11_add_module(_mle_bindings src/mle_module.cpp)
+target_link_libraries(_mle_bindings PUBLIC deeptime::msm_mle)
 if(OpenMP_FOUND)
-    target_link_libraries(${PROJECT_NAME} PUBLIC OpenMP::OpenMP_CXX)
+    target_link_libraries(_mle_bindings PUBLIC OpenMP::OpenMP_CXX)
 endif()
