--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -7,7 +7,7 @@ conan_basic_setup(TARGETS)
 
 set(TEST_SRC src/test_common_utilities.cpp)
 add_executable(tests catch_main.cpp ${TEST_SRC})
-target_link_libraries(tests PRIVATE ${CONAN_LIBS} CONAN_PKG::catch2 deeptime::common pybind11::embed)
+target_link_libraries(tests PUBLIC ${CONAN_LIBS} CONAN_PKG::catch2 deeptime::common pybind11::embed)
 
 add_custom_target(
         run_tests
