--- a/devtools/conda-setup+build.yml
+++ b/devtools/conda-setup+build.yml
@@ -6,10 +6,11 @@ steps:
   displayName: Configure conda
 - bash: |
     conda update --all
-    conda install conda-build conda-verify pip
+    conda install mamba
+    mamba install boa conda-build conda-verify pip
   displayName: 'Update and install dependencies'
   continueOnError: false
 - bash: |
-    conda build devtools --python 3.10 --numpy 1.21
+    conda mambabuild devtools --python 3.10 --numpy 1.21
   displayName: 'Build and test'
   continueOnError: false
