--- a/devtools/conda-setup+build.yml
+++ b/devtools/conda-setup+build.yml
@@ -5,8 +5,8 @@ steps:
     conda config --set quiet true
   displayName: Configure conda
 - bash: |
-    conda update --all
     conda install mamba
+    mamba update --all
     mamba install boa conda-build conda-verify pip
   displayName: 'Update and install dependencies'
   continueOnError: false
