Fix build after merge

--- a/deeptime/markov/_bindings/CMakeLists.txt
+++ b/deeptime/markov/_bindings/CMakeLists.txt
@@ -20,5 +20,5 @@ add_library(deeptime::tram ALIAS deeptime_tram)
 pybind11_add_module(_tram_bindings src/tram_module.cpp)
 target_link_libraries(_tram_bindings PUBLIC deeptime::tram)
 if(OpenMP_FOUND)
-    target_link_libraries(${PROJECT_NAME} PUBLIC OpenMP::OpenMP_CXX)
+    target_link_libraries(_tram_bindings PUBLIC OpenMP::OpenMP_CXX)
 endif()
