--- a/deeptime/markov/tools/estimation/sparse/_bindings/CMakeLists.txt
+++ b/deeptime/markov/tools/estimation/sparse/_bindings/CMakeLists.txt
@@ -1,12 +1,7 @@
 project(deeptime_msm_mle_sparse CXX)
 
-add_library(${PROJECT_NAME} INTERFACE)
-target_include_directories(${PROJECT_NAME} INTERFACE include)
-target_link_libraries(${PROJECT_NAME} INTERFACE deeptime::common)
-add_library(deeptime::msm_mle_sparse ALIAS ${PROJECT_NAME})
-
 pybind11_add_module(_mle_sparse_bindings src/mle_sparse_module.cpp)
-target_link_libraries(_mle_sparse_bindings PUBLIC deeptime::msm_mle_sparse)
+target_link_libraries(_mle_sparse_bindings PUBLIC deeptime::deeptime)
 if(OpenMP_FOUND)
     target_link_libraries(_mle_sparse_bindings PUBLIC OpenMP::OpenMP_CXX)
 endif()
