--- a/deeptime/src/CMakeLists.txt
+++ b/deeptime/src/CMakeLists.txt
@@ -1,5 +1,5 @@
-project(deeptime_common)
+project(deeptime)
 
 add_library(${PROJECT_NAME} INTERFACE)
 target_include_directories(${PROJECT_NAME} INTERFACE include)
-add_library(deeptime::common ALIAS ${PROJECT_NAME})
+add_library(deeptime::deeptime ALIAS ${PROJECT_NAME})
