--- a/deeptime/clustering/CMakeLists.txt
+++ b/deeptime/clustering/CMakeLists.txt
@@ -2,8 +2,7 @@ project(_clustering_bindings CXX)
 
 set(SRC src/clustering_module.cpp)
 pybind11_add_module(${PROJECT_NAME} ${SRC})
-target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_LIST_DIR}/include)
-target_link_libraries(${PROJECT_NAME} PUBLIC deeptime::common)
+target_link_libraries(${PROJECT_NAME} PUBLIC deeptime::deeptime)
 if(OpenMP_FOUND)
     target_link_libraries(${PROJECT_NAME} PUBLIC OpenMP::OpenMP_CXX)
 endif()
