--- a/deeptime/markov/msm/tram/_bindings/CMakeLists.txt
+++ b/deeptime/markov/msm/tram/_bindings/CMakeLists.txt
@@ -1,11 +1,5 @@
-
-add_library(deeptime_tram INTERFACE)
-target_include_directories(deeptime_tram INTERFACE include)
-target_link_libraries(deeptime_tram INTERFACE deeptime::numeric deeptime::common)
-add_library(deeptime::tram ALIAS deeptime_tram)
-
 pybind11_add_module(_tram_bindings ../_bindings/src/tram_module.cpp)
-target_link_libraries(_tram_bindings PUBLIC deeptime::tram)
+target_link_libraries(_tram_bindings PUBLIC deeptime::deeptime)
 if(OpenMP_FOUND)
     target_link_libraries(_tram_bindings PUBLIC OpenMP::OpenMP_CXX)
 endif()
