--- a/tests/requirements.txt
+++ b/tests/requirements.txt
@@ -1,5 +1,6 @@
 numpy==1.19.3; python_version=="3.6"
-numpy==1.21.4; python_version>="3.7"
+numpy==1.21.4; python_version=="3.7"
+numpy==1.22.0; python_version>="3.8"
 importlib_metadata; python_version<"3.8"
 typing_extensions; python_version<"3.8"
 scipy==1.7.2
