switched to scikit-build as build system

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,28 @@
-cmake_minimum_required(VERSION 3.9)
+cmake_minimum_required(VERSION 3.15)
 
 set(CMAKE_CXX_STANDARD 17)
 
+set(DEEPTIME_VERSION "0.0.0" CACHE STRING "The version without commit offset. Defaults to 0.0.0")
+set(DEEPTIME_VERSION_INFO "0.0.0" CACHE STRING "The full version. Defaults to 0.0.0")
 set(DEEPTIME_BUILD_CPP_TESTS OFF CACHE BOOL "Whether to build the c++ unit tests")
 
 if(DEFINED PROJECT_NAME)
     set(DEEPTIME_IS_SUBPROJECT ON)
 endif()
-project(deeptime LANGUAGES C CXX VERSION 0.0.0)
+project(deeptime LANGUAGES C CXX VERSION ${DEEPTIME_VERSION})
+set(DEEPTIME_ROOT_DIRECTORY "${CMAKE_CURRENT_LIST_DIR}")
+
+if(SKBUILD)
+    # Scikit-Build does not add your site-packages to the search path
+    # automatically, so we need to add it _or_ the pybind11 specific directory
+    # here.
+    execute_process(
+            COMMAND "${PYTHON_EXECUTABLE}" -c
+            "import pybind11; print(pybind11.get_cmake_dir())"
+            OUTPUT_VARIABLE _tmp_dir
+            OUTPUT_STRIP_TRAILING_WHITESPACE COMMAND_ECHO STDOUT)
+    list(APPEND CMAKE_PREFIX_PATH "${_tmp_dir}")
+endif()
 
 find_package(OpenMP 4)
 if(OpenMP_FOUND)
@@ -18,19 +33,18 @@ if(MSVC)
     add_compile_options(/W3 /EHsc /bigobj /permissive- /std:c++17)
 endif()
 
-find_package(pybind11 REQUIRED)
+# use cmake 3.12+ FindPython
+find_package(Python COMPONENTS Interpreter Development)
+# now find pybind
+find_package(pybind11 REQUIRED CONFIG)
 
 add_subdirectory(deeptime/src)
-add_subdirectory(deeptime/numeric/_bindings)
+add_subdirectory(deeptime/numeric)
 add_subdirectory(deeptime/data)
 add_subdirectory(deeptime/covariance/util/covar_c)
 add_subdirectory(deeptime/clustering)
 add_subdirectory(deeptime/basis)
-add_subdirectory(deeptime/markov/_bindings)
-add_subdirectory(deeptime/markov/hmm/_bindings)
-add_subdirectory(deeptime/markov/msm/tram/_bindings)
-add_subdirectory(deeptime/markov/tools/estimation/dense/_bindings)
-add_subdirectory(deeptime/markov/tools/estimation/sparse/_bindings)
+add_subdirectory(deeptime/markov)
 
 add_subdirectory(examples/clustering_custom_metric)
 
