--- a/deeptime/markov/msm/tram/CMakeLists.txt
+++ b/deeptime/markov/msm/tram/CMakeLists.txt
@@ -1,7 +1,6 @@
-project(_data_bindings CXX)
+project(_tram_bindings)
 
-set(SRC src/data_module.cpp)
-pybind11_add_module(${PROJECT_NAME} ${SRC})
+pybind11_add_module(${PROJECT_NAME} _bindings/src/tram_module.cpp)
 target_link_libraries(${PROJECT_NAME} PUBLIC deeptime::deeptime)
 if(OpenMP_FOUND)
     target_link_libraries(${PROJECT_NAME} PUBLIC OpenMP::OpenMP_CXX)
