--- a/deeptime/numeric/CMakeLists.txt
+++ b/deeptime/numeric/CMakeLists.txt
@@ -6,3 +6,5 @@ target_link_libraries(${PROJECT_NAME} PUBLIC deeptime::deeptime)
 if (OpenMP_FOUND)
     target_link_libraries(${PROJECT_NAME} PUBLIC OpenMP::OpenMP_CXX)
 endif()
+file(RELATIVE_PATH REL_PATH "${DEEPTIME_ROOT_DIRECTORY}/deeptime" "${CMAKE_CURRENT_SOURCE_DIR}")
+install(TARGETS ${PROJECT_NAME} DESTINATION ${REL_PATH})
