--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,11 @@ deep-learning = ['pytorch']
 plotting = ['matplotlib', 'networkx']
 
 [build-system]
-requires = ["toml", "setuptools", "wheel", "numpy>=1.14", "scipy", "Cython", "pybind11"]
+requires = [
+    "setuptools>=42", "wheel", "scikit-build", "cmake", "Cython", "pybind11", "numpy>=1.14", "toml", "versioneer-518",
+    "ninja; platform_system!='Windows'"
+]
+build-backend = "setuptools.build_meta"
 
 [tool.pytest.ini_options]
 filterwarnings = ["once", "ignore::UserWarning"]
