--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,8 +22,7 @@ plotting = ['matplotlib', 'networkx']
 [build-system]
 requires = [
     "setuptools>=42", "wheel", "scikit-build", "cmake", "Cython", "pybind11", "numpy>=1.14",
-    "toml", "versioneer-518", "scipy",
-    "ninja; platform_system!='Windows'"
+    "toml", "scipy", "ninja; platform_system!='Windows'"
 ]
 build-backend = "setuptools.build_meta"
 
