cmake minimum version

--- a/devtools/conda-recipe/meta.yaml
+++ b/devtools/conda-recipe/meta.yaml
@@ -23,6 +23,7 @@ requirements:
     - pybind11
     - toml
     - scikit-build
+    - cmake >=3.15
     - llvm-openmp  # [osx]
     - libgomp  # [linux]
 
