--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ plotting = ['matplotlib', 'networkx']
 
 [build-system]
 requires = [
-    "setuptools>=42", "wheel", "scikit-build", "cmake", "Cython", "pybind11", "numpy>=1.14",
+    "setuptools>=42", "wheel", "scikit-build", "Cython", "pybind11", "numpy>=1.14",
     "toml", "scipy", "ninja; platform_system!='Windows'"
 ]
 build-backend = "setuptools.build_meta"
