--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,8 +21,16 @@ plotting = ['matplotlib', 'networkx']
 
 [build-system]
 requires = [
-    "setuptools>=42", "wheel", "scikit-build", "Cython", "pybind11", "numpy>=1.14",
-    "toml", "scipy", "ninja; platform_system!='Windows'"
+    "setuptools>=42",
+    "wheel",
+    "scikit-build>=0.14",
+    "cython",
+    "pybind11>=2.9.0",
+    "numpy>=1.14",
+    "cmake>=3.22",
+    "toml",
+    "scipy",
+    "ninja; platform_system!='Windows'"
 ]
 build-backend = "setuptools.build_meta"
 
