--- a/deeptime/clustering/CMakeLists.txt
+++ b/deeptime/clustering/CMakeLists.txt
@@ -1,10 +1,4 @@
 project(_clustering_bindings CXX)
 
 set(SRC src/clustering_module.cpp)
-pybind11_add_module(${PROJECT_NAME} ${SRC})
-target_link_libraries(${PROJECT_NAME} PUBLIC deeptime::deeptime)
-if(OpenMP_FOUND)
-    target_link_libraries(${PROJECT_NAME} PUBLIC OpenMP::OpenMP_CXX)
-endif()
-file(RELATIVE_PATH REL_PATH "${DEEPTIME_ROOT_DIRECTORY}/deeptime" "${CMAKE_CURRENT_SOURCE_DIR}")
-install(TARGETS ${PROJECT_NAME} DESTINATION ${REL_PATH})
+register_pybind_module(${PROJECT_NAME} ${SRC})
