put libraries directly into appropriate python package if cmake is called natively

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,6 +48,9 @@ function(register_pybind_module name)
     endif()
     file(RELATIVE_PATH REL_PATH "${DEEPTIME_ROOT_DIRECTORY}/deeptime" "${CMAKE_CURRENT_LIST_DIR}")
     install(TARGETS ${name} DESTINATION ${REL_PATH})
+    if(NOT SKBUILD)
+        set_target_properties(${name} PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_LIST_DIR})
+    endif()
 endfunction()
 
 add_subdirectory(deeptime/src)
